src/app/components/manager/child-components/post-item/post-item.component.css
.post {
  width: 94%;
  min-height: 150px;
  max-height: 35vh;
  margin-bottom: 1vw;
  position: relative;
}

.extend-btn {
  position: absolute;
  top: 1vw;
  left: 1vw;
  min-width: 40px;
  height: 40px;
  padding: 0 !important;
}

.post-data {
  padding: 0 2vw;
  font-size: 18px;
}

.collapsed {
  overflow-y: hidden;
  width: 98%;
}

.extended {
  max-height: 30vh;
  overflow: hidden;
  margin-bottom: -15px;
}

mat-form-field {
  width: 100%;
  line-height: 1.2 !important;
  font-family: "Varela Round";
  overflow-x: visible;
  text-align: right;
}

.message {
  width: 98%;
  max-height: 18vh !important;
  padding: 0 0 0 10px;
  margin-top: -1.28125em;
  resize: none;
  overflow-y: auto;
}

.comment-container {
  max-width: 70%;
  margin-top: 10px;
}

.comment {
  height: 25px;
  resize: none;
}

.update-btn {
  color: green;  
  position: absolute;
  left: 8.5vw;
  bottom: 1.1vw;
}

mat-card-actions {
  position: absolute;
  left: 1.5vw;
  bottom: 1.5vw;
}

.mat-card-actions .mat-stroked-button {
  margin: 0 8px 0 0;
}

.my-scroller::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
  background-color: #f5f5f5;
  border-radius: 10px;
}

.my-scroller::-webkit-scrollbar {
  width: 6px;
}

.my-scroller::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: rgb(73, 125, 189);
}

